# libtorch_onnx_examples

./: .gitignore  README.md
cpp_onnx/: CMakeLists.txt  testONNX.cpp
cpp_pt/: CMakeLists.txt  testPT.cpp
py/: feedforward_cnn.py  feedforward_nn.py  testCNN.onnx  testCNN.pt  testNN.onnx  testNN.pt
